--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import "tailwindcss";
+
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
